stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Put':
CircularBuffer.c:50:33: error: expected ')' before '{' token
   50 |  if (CircularBuffer_IsFull(self){
      |     ~                           ^
      |                                 )
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
